--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                 <li class="nav-item">
                   <span
                     id="create-pic-link"
-                    class="nav-link cursor"
+                    class="nav-link cursor d-none"
                     aria-current="page"
                     >Add Pic</span
                   >
@@ -85,10 +85,26 @@
                 </li>
                 <li class="nav-item">
                   <span
+                    id="edit-profile-page-link"
+                    class="nav-link cursor d-none"
+                    aria-current="page"
+                    >edit profile</span
+                  >
+                </li>
+                <li class="nav-item">
+                  <span
                     id="login-page-link"
                     class="nav-link cursor"
                     aria-current="page"
                     >Login</span
+                  >
+                </li>
+                <li class="nav-item">
+                  <span
+                    id="logout-page-link"
+                    class="nav-link cursor d-none"
+                    aria-current="page"
+                    >logout</span
                   >
                 </li>
               </ul>
@@ -150,13 +166,92 @@
         <div class="container">
           <div class="center">
             <div class="col-12 col-md-10 col-xl-8">
-              <h1 class="display-4">ABOUT PAGE</h1>
-              <h2 class="fs-5">Here you can look at your pictures...</h2>
+              <h1 class="display-4 text-center">ABOUT PAGE</h1>
+              <div class="card mb-3">
+                <img
+                  src="assets/images/homepage.png"
+                  class="card-img-top"
+                  alt="home page"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Homepage Description</h5>
+                  <p class="card-text">
+                    This is the home screen through which you can enter the
+                    application through which you can see a changing photo
+                    gallery and the names of the creators of the photos.
+                  </p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Navigation Menu</h5>
+                  <p class="card-text">
+                    This is a navigation menu through which you can register for
+                    the application, connect to the application
+                    and read about it.
+                  </p>
+                </div>
+                <img
+                  src="assets/images/navbar.png"
+                  class="card-img-bottom"
+                  alt="navbar"
+                />
+              </div>
+              <div class="card mb-3">
+                <img
+                  src="assets/images/register.png"
+                  class="card-img-top"
+                  alt="register"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Sign-Up Menu</h5>
+                  <p class="card-text">
+                    The Sign-Up Menu is where the user fills in details in the
+                    appropriate fields to register for using the application.
+                  </p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Login Menu</h5>
+                  <p class="card-text">
+                    The login menu is the menu through which the user connects
+                    to the application. After logging in, the user is
+                    transferred to the home page and in the navigation menu
+                    there will be an option to disconnect from the application
+                    instead of the option to connect to it.
+                  </p>
+                </div>
+                <img
+                  src="assets/images/login-page.png"
+                  class="card-img-bottom"
+                  alt="login"
+                />
+                <img
+                  src="assets/images/navbar2.png"
+                  class="card-img-bottom"
+                  alt="navbar"
+                />
+              </div>
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Add Picture Menu</h5>
+                  <p class="card-text">
+                    In the Add Picture Menu, the user may add a picture that he
+                    owns, specify who created the picture , describe it with a
+                    title and description and give it a price tag.
+                  </p>
+                </div>
+                <img
+                  src="assets/images/addpic.png"
+                  class="card-img-bottom"
+                  alt="add pictures"
+                />
+              </div>
+
               <hr />
             </div>
           </div>
-
-          <p>about page content</p>
         </div>
       </div>
 
@@ -231,55 +326,6 @@
         </div>
       </div>
 
-      <!-- signup page -->
-      <!-- <div id="signup-page" class="d-none">
-        <div class="container">
-          <div class="center" style="min-height: 87vh">
-            <form
-              class="form col-12 col-md-10 col-xl-8 p-2 rounded border"
-              style="max-width: 450px"
-            >
-              <h1 class="text-center fs-5">SIGNUP</h1>
-
-              <div>
-                <label for="signup-email-field">email</label>
-                <input
-                  class="form-control mb-2"
-                  type="email"
-                  name="email"
-                  id="signup-email-field"
-                  autocomplete="off"
-                />
-                <span id="signup-email-error" class="text-danger"></span>
-              </div>
-
-              <div>
-                <label for="signup-password-field">password</label>
-                <input
-                  class="form-control mb-2"
-                  type="password"
-                  name="password"
-                  id="login-password-field"
-                  autocomplete="off"
-                />
-                <span
-                  id="signup-password-error"
-                  class="text-danger mb-1"
-                ></span>
-              </div>
-
-              <input
-                id="signup-submit-btn"
-                type="button"
-                value="Submit"
-                class="btn btn-primary col-12 mb-2"
-                disabled
-              />
-            </form>
-          </div>
-        </div>
-      </div> -->
-
       <div id="signup-page" class="d-none">
         <div class="container">
           <div class="center" style="height: 87vh">
@@ -294,7 +340,7 @@
                     id="first-name-rgister"
                     type="text"
                     class="form-control mb-2"
-                    name="First"
+                    name="first"
                   />
                   <span
                     class="text-danger"
@@ -307,7 +353,7 @@
                     id="last-name-rgister"
                     type="text"
                     class="form-control mb-2"
-                    name="Last"
+                    name="last"
                   />
                   <span id="last-name-rgister-error" class="text-danger"></span>
                 </div>
@@ -320,7 +366,7 @@
                     id="address-register-cuntry"
                     type="text"
                     class="form-control mb-2"
-                    name="cuntry"
+                    name="country"
                   />
                   <span
                     id="address-register-cuntry-error"
@@ -523,7 +569,11 @@
           <div class="center">
             <div class="col-12 col-md-10 col-xl-8">
               <h1 class="display-4">ERROR 404 PAGE</h1>
-              <h2 class="fs-5">Here you can look at your pictures...</h2>
+              <h2 class="fs-5">
+                <span id="return-to-home-page-link" class="navbar-brand cursor"
+                  >return to home page</span
+                >
+              </h2>
               <hr />
             </div>
           </div>
